# AI-Call

./: .cursorrules  .gitignore  README.md  SETUP_GUIDE.md  TEAM_GUIDE.md  package-lock.json
.github/workflows/: ci.yml
apps/backend/: README.md  alembic.ini  env.example  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/v1/: __init__.py  ai.py  auth.py  calls.py  diaries.py  notifications.py  todos.py  users.py
apps/backend/app/core/: config.py  database.py  deps.py  security.py
apps/backend/app/models/: call.py  diary.py  todo.py  user.py
apps/mobile/: App.tsx  README.md  app.json  babel.config.js  index.js  package.json
apps/mobile/assets/: placeholder.txt
apps/mobile/src/constants/: theme.ts
apps/mobile/src/navigation/: AppNavigator.tsx
apps/mobile/src/screens/auth/: LoginScreen.tsx
apps/mobile/src/screens/elderly/: ElderlyHome.tsx
apps/mobile/src/state/slices/: authSlice.ts
apps/mobile/src/store/: authStore.ts
apps/mobile/web/: index.html
infrastructure/docker/: docker-compose.yml
infrastructure/scripts/: setup-dev.js
